# emitter

./: .gitignore  LICENSE  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  emitter.h  main.cpp
src/emitter/: Makefile.am  canemit.h  emitter.cpp  emitter.h
